--- a/package.json
+++ b/package.json
@@ -14,8 +14,11 @@
     "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
   },
   "dependencies": {
+    "@emotion/core": "^10.1.1",
+    "@emotion/styled": "^10.0.27",
     "gatsby": "^2.25.3",
     "gatsby-plugin-create-client-paths": "^2.3.13",
+    "gatsby-plugin-emotion": "^4.3.15",
     "gatsby-plugin-react-svg": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
