--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^2.25.3",
     "gatsby-plugin-create-client-paths": "^2.3.13",
     "gatsby-plugin-emotion": "^4.3.15",
+    "gatsby-plugin-netlify": "^2.4.0",
     "gatsby-plugin-react-svg": "^3.0.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0"
