--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gatsby-starter-hello-world",
+  "name": "beacon-glades",
   "private": true,
-  "description": "A simplified bare-bones starter for Gatsby",
+  "description": "Website for Beacon Glades Disc Golf",
   "version": "0.1.0",
   "license": "0BSD",
   "scripts": {
@@ -16,22 +16,30 @@
   "dependencies": {
     "@emotion/core": "^10.1.1",
     "@emotion/styled": "^10.0.27",
+    "autoprefixer": "^10.1.0",
     "gatsby": "^2.25.3",
+    "gatsby-image": "^2.9.0",
     "gatsby-plugin-create-client-paths": "^2.3.13",
     "gatsby-plugin-emotion": "^4.3.15",
     "gatsby-plugin-netlify": "^2.4.0",
+    "gatsby-plugin-postcss": "^3.4.0",
     "gatsby-plugin-react-svg": "^3.0.0",
+    "gatsby-plugin-sharp": "^2.12.2",
+    "gatsby-source-filesystem": "^2.9.1",
+    "gatsby-transformer-sharp": "^2.10.1",
+    "postcss": "^8.2.2",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "tailwindcss": "^2.0.2"
   },
   "devDependencies": {
     "prettier": "2.1.2"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/gatsbyjs/gatsby-starter-hello-world"
+    "url": "https://github.com/JSGraef/Beacon-Glades"
   },
   "bugs": {
-    "url": "https://github.com/gatsbyjs/gatsby/issues"
+    "url": "https://github.com/JSGraef/Beacon-Glades/issues"
   }
 }
