--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "gatsby": "^3.0.4",
     "gatsby-image": "^3.0.0",
     "gatsby-plugin-create-client-paths": "^3.0.0",
+    "gatsby-plugin-image": "^1.1.0",
     "gatsby-plugin-netlify": "^3.0.0",
     "gatsby-plugin-postcss": "^4.0.0",
     "gatsby-plugin-react-svg": "^3.0.0",
